--- a/contenido/el_critico.html
+++ b/contenido/el_critico.html
@@ -5,66 +5,96 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/guia_estils.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@100;300;400&family=Gelasio:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/guia_estils.css">
+    <link rel="stylesheet" href="../css/index.css">
+    <script src="https://kit.fontawesome.com/bdb09794cc.js" crossorigin="anonymous"></script>
     <title>Juan Ortega Herrerías</title>
 </head>
 
 <body>
     <!-- HEADER -->
     <header class="container-fluid">
-        <div class="row colorPrincipal align-items-center ">
-            <div class="col-12 col-lg-6 col-xl-4">
-                <div class="row align-items-center justify-content-between">
-                    <div class="col-lg-1">
+        <div class="row colorPrincipal justify-content-between ">
+            <div class="col-12">
+                <div class="row align-items-center ">
+                    <div class="col-1">
                         <img class="web-icono d-none d-lg-flex" src="../imagenes/mascaras.png" alt="Icono
           de cultural life" />
                     </div>
-                    <div class="col-12 col-lg-10 ">
-                        <h1 class="text-center">CULTURAL LIFE</h1>
+                    <div class="col-12 col-md-6 ">
+                        <h1 class="text-center text-md-start">CULTURAL LIFE</h1>
                         <h2 class="d-none d-lg-flex text-center">Nuestra vida es la cultura.</h2>
+                    </div>
+                    <div class="col-12 col-md-4 justify-content-end ">
+                        <ul class="row list-inline text-center text-lg-end">
+                            <li class="list-inline-item col">
+                                <a href="../contenido/login.html">
+                                    <i class="fa-solid fa-arrow-right-to-bracket fa-xs "> Entrar</i>
+                                </a>
+                            </li>
+                            <li class="list-inline-item col ">
+                                <a href="../contenido/nuevo_usuario.html"><i class="fa-solid fa-circle-plus fa-xs"> Nuevo_Usuario</i>
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-lg-6 col-xl-4">
-                <ul class="row list-inline text-lg-end">
-                    <li class="list-inline-item col-2 offset-sm-2 col-sm-2 offset-md-0 col-md-3">
-                        <a href="../index.html">Inicio</a>
-                    </li>
-                    <li class="list-inline-item offset-1 col-2 offset-sm-0 col-sm-2 col-md-3">
-                        <a href="el_critico.html">El_Crítico</a>
-                    </li>
-                    <li class="list-inline-item  col-3 col-sm-2 col-md-3">
-                        <a href="novedades.html">Novedades</a>
-                    </li>
-                    <li class="list-inline-item col-2 col-sm-2 col-md-2">
-                        <a href="contacto.html">&nbspContacto</a>
-                    </li>
-                </ul>
-            </div>
 
-            <div class="col-12  offset-sm-4 col-sm-8  offset-md-6 col-md-6 offset-xl-0 col-xl-4">
-                <ul class="row list-inline text-center text-lg-end">
-                    <li class="list-inline-item col   ">
-                        <img class="icono" src="../imagenes/login.svg" alt="login" /><a href="login.html">Entrar</a>
+            <div class="col-12 col-lg-6">
+                <ul class="row list-inline justify-content-start ">
+                    <li class="list-inline-item col-2">
+                        <a href="../index.html"><i class="fa-solid fa-house fa-2xs">&nbspInicio</i></a>
                     </li>
-                    <li class="list-inline-item col ">
-                        <img class="icono" src="../imagenes/new_user.svg" alt="nuevo usuario" />
-                        <a href="nuevo_usuario.html">Nuevo_Usuario</a>
+                    <li class="list-inline-item col-3">
+                        <a href="../contenido/el_critico.html"><i class="fa-solid fa-microphone fa-2xs">&nbspEl_Crítico</i></a>
+                    </li>
+                    <li class="list-inline-item  col-3">
+                        <a href="../contenido/novedades.html"><i class="fa-solid fa-arrow-trend-up fa-2xs">&nbspNovedades</i></a>
+                    </li>
+                    <li class="list-inline-item col-2">
+                        <a href="../contenido/contacto.html"><i class="fa-solid fa-address-book fa-2xs">&nbspContacto</i></a>
                     </li>
                 </ul>
             </div>
         </div>
     </header>
-
     <!-- MAIN -->
-    <main class="container-fluid row">
-        <div class="col-12 mt-5 ">
+    <div class="container-fluid mt-1">
+        <nav class="row">
+            <h4>Activitats EAF-2</h4>
+            <div class="col-12 ">
+                <ul class="row list-inline justify-content-lg-start">
+                    <li class="list-inline-item col-3 col-md-1 ">
+                        <a href="../contenido/imatges.html"><i class="fa-solid fa-image fa-2xs">&nbspImatges</i></a>
+                    </li>
+                    <li class="list-inline-item col-4  col-md-1 ">
+                        <a href="../contenido/audio.html"><i class="fa-solid fa-headphones fa-2xs">&nbspAudio</i></a>
+                    </li>
+                    <li class="list-inline-item  col-4 col-md-1 ">
+                        <a href="../contenido/video.html"><i class="fa-brands fa-youtube fa-xs">&nbspVideo</i></a>
+                    </li>
+                    <li class="list-inline-item col-3 col-md-1 ">
+                        <a href="../contenido/playlist.html"><i class="fa-solid fa-ear-listen fa-2xs ">&nbspPlaylist</i></a>
+                    </li>
+                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
+                        <a href="../contenido/transicions.html"><i class="fa-solid fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspTransicions</a>
+                    </li>
+                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
+                        <a href="../contenido/animacions.html"><i class="fa-solid fa-down-left-and-up-right-to-center fa-2xs"></i>&nbspAnimacions</a>
+                    </li>
+                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
+                        <a href="../contenido/grafica.html"><i class="fa-solid fa-arrow-trend-up fa-2xs"></i>&nbspGráfica</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <main class="col-12 mt-1 ">
             <div class="text-center">
                 <h2>EL CRÍTICO RECOMIENDA</h2>
             </div>
@@ -127,30 +157,30 @@
                     </div>
                 </article>
                 </div>
-            </div>
-    </main>
-    <!-- FOOTER -->
-    <footer class="container-fluid colorSecundario">
-        <div class="row mt-5 align-items-xl-center">
-            <div class="col-12 col-md-4 col-lg-3 col-xl-2">
-                <h3>Mantente informado...</h3>
-                <ul class="list-inline">
-                    <li class="list-inline-item">
-                        <a href="http://www.instagram.com" target="_blank"><img class="icono colorSecundario" src="../imagenes/instagram.svg" alt="icono
+        </main>
+        </div>
+        <!-- FOOTER -->
+        <footer class="container-fluid colorSecundario">
+            <div class="row mt-5 align-items-xl-center">
+                <div class="col-12 col-md-4 col-lg-3 col-xl-2">
+                    <h3>Mantente informado...</h3>
+                    <ul class="list-inline">
+                        <li class="list-inline-item">
+                            <a href="http://www.instagram.com" target="_blank"><img class="icono colorSecundario" src="../imagenes/instagram.svg" alt="icono
                                     de instagram" /></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="https://es-es.facebook.com/" target="_blank"><img class="icono
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://es-es.facebook.com/" target="_blank"><img class="icono
                                     colorSecundario" src="../imagenes/facebook.svg" alt="icono
                                     de facebook" /></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="https://twitter.com/" target="_blank"><img class="icono colorSecundario" src="../imagenes/twitter.svg" alt="icono
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://twitter.com/" target="_blank"><img class="icono colorSecundario" src="../imagenes/twitter.svg" alt="icono
                                     de twitter" /></a>
-                    </li>
-                </ul>
-            </div>
-            <div class="d-none d-md-flex col-md-8 col-lg-6 col-xl-6" ">
+                        </li>
+                    </ul>
+                </div>
+                <div class="d-none d-md-flex col-md-8 col-lg-6 col-xl-6" ">
                 <div class="container row align-items-center ">
                     <div class="col ">
                         <img class="icono-mediano " src="../imagenes/mascaras.png " alt="Icono de cultural life " />
